objects/GL_Account__c.object
<CustomObject><fields>
        <fullName>ACF_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012360000007uz2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Activity_Code__c</fullName>
        <label>Activity Code</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Billable_Days__c</fullName>
        <label>Billable Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Business_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GL Accounts (Business Organization)</relationshipLabel>
        <relationshipName>GL_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Contracted_Amount__c</fullName>
        <label>Contracted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_Contracted_Date__c</fullName>
        <label>Contracted Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_GL_Account__c</fullName>
        <label>GL Account</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Management_Center_Name__c</fullName>
        <formula>CASE( ACF_Management_Center__c , 
"112", "BEE Custom Programs",
"113", "BEE Open-Enrollment Programs",
"114", "BEE Consortium Programs",
"115", "BEE Institute Programs",
"116", "BEE Research Centers",
"122", "BEE Administrative Account",
"123", "Graduate Corporate Programs",
"146", "Europe Institute Programs",
"150", "Enterprise Admin",
"154", "Center for Women's Leadership",
"190", "Enterprise - SEE",
"191", "Enterprise - MEE",
"192", "Enterprise - Short Courses",
"193", "Enterprise - Other",
"UNKNOWN")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Management Center Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Management_Center__c</fullName>
        <inlineHelpText>112-BEE Custom Prgm
113-BEE OE Prgs
114 BEE Consortium Pgms
115 BEE Institute Pgms
116 BEE Research Ctrs
122 BEE Admin Acct
123 Grad Corp Pgms
146 Eu Inst Pgms
150 Ent Admin
154 Ctr for W Ldrshp
190 Ent-SEE
191 Ent-MEE
192 Ent-Short
193 Other</inlineHelpText>
        <label>Management Center</label>
        <picklist>
            <picklistValues>
                <fullName>112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>113</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>122</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>146</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>154</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>191</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>192</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>193</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Temp_GL_Name__c</fullName>
        <description>Temp field to build the GL Account name with the proper format and compare against the value in the GL Account Name (API:Name) field.  Needed since validation rule cannot be applied to the standard, indexed field.</description>
        <formula>ACF_Fiscal_Year__c + ":" +  TEXT(ACF_Management_Center__c ) + "-" +  ACF_Activity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp GL Name</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>GL Account</label><nameField>
        <label>GL Account Name</label>
        <type>Text</type>
    </nameField><pluralLabel>GL Accounts</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACF_Activity_Code__c</columns>
        <columns>ACF_GL_Account__c</columns>
        <columns>ACF_Management_Center__c</columns>
        <columns>ACF_Management_Center_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><validationRules>
        <fullName>Validate_GL_Account_Name_field_format</fullName>
        <active>true</active>
        <errorConditionFormula>Name  &lt;&gt;  ACF_Temp_GL_Name__c</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Must have the format: Fiscal Year]:[Mgmnt Center]-[Activity Code] (e.g., 2017:113-1234).</errorMessage>
    </validationRules></CustomObject>